--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "package": "aws cloudformation package --template-file template.yaml --output-template-file output.yaml --s3-bucket s3-lambda-humantrafficking",
-    "deploy": "aws cloudformation deploy --template-file output.yaml --stack-name s3-lambda-save-dynamodb --capabilities CAPABILITY_IAM --parameter-overrides TableName=$npm_package_config_table_name",
+    "package": "aws cloudformation package --template-file template.yaml --output-template-file output.yaml --s3-bucket  --s3-bucket human-trafficking
+",
+    "deploy": "aws cloudformation deploy --template-file output.yaml --stack-name s3-lambda-human-trafficing --capabilities CAPABILITY_IAM --parameter-overrides TableName=$human-trafficking",
     "qd": "npm run package && npm run deploy"
   },
   "config": {
